# r2r

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  msgs.txt  r2r_cargo.cmake  rustfmt.toml
.github/workflows/: Dockerfile  rust_and_ros2.yml
actions/: Cargo.toml  build.rs
actions/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
examples/: action_client.rs  action_client_untyped.rs  action_server.rs  client.rs  clock.rs  logging.rs  parameters.rs  publish_complex_msgs.rs  publishers.rs  rostopic_echo.rs  rostopic_list.rs  service.rs  subscriber.rs  subscriber_with_thread.rs  tokio.rs  tokio_client.rs  tokio_examples.rs  tokio_publisher.rs  tokio_service.rs  tokio_subscriber.rs  untyped_client.rs  wall_timer.rs
msg_gen/: Cargo.toml  build.rs
msg_gen/src/: lib.rs
r2r/: Cargo.toml  README.md  build.rs
r2r/benches/: deserialization.rs
r2r/bindings/: _r2r_generated_action_helper.rs  _r2r_generated_msgs.rs  _r2r_generated_service_helper.rs  _r2r_generated_untyped_helper.rs  ackermann_msgs.rs  action_msgs.rs  action_tutorials_interfaces.rs  actionlib_msgs.rs  automotive_navigation_msgs.rs  automotive_platform_msgs.rs  autoware_auto_msgs.rs  blickfeld_driver.rs  bond.rs  builtin_interfaces.rs  can_msgs.rs  cartographer_ros_msgs.rs  cascade_lifecycle_msgs.rs  composition_interfaces.rs  control_msgs.rs  controller_manager_msgs.rs  depthai_ros_msgs.rs  diagnostic_msgs.rs  domain_bridge.rs  dwb_msgs.rs  dynamixel_sdk_custom_interfaces.rs  dynamixel_workbench_msgs.rs  example_interfaces.rs  files.txt  foros_msgs.rs  four_wheel_steering_msgs.rs  foxglove_msgs.rs  gazebo_msgs.rs  geographic_msgs.rs  geometry_msgs.rs  gps_msgs.rs  graph_msgs.rs  grbl_msgs.rs  irobot_create_msgs.rs  kobuki_ros_interfaces.rs  lgsvl_msgs.rs  (+112 more)
r2r/examples/: action_client.rs  action_client_untyped.rs  action_server.rs  callback_tracing.rs  client.rs  clock.rs  logging.rs  parameters.rs  parameters_derive.rs  publishers.rs  rostopic_echo.rs  rostopic_list.rs  serialization.rs  service.rs  sim_time_publisher.rs  subscriber.rs  timer_sim_time.rs  tokio.rs  tokio_client.rs  tokio_examples.rs  tokio_raw_publisher.rs  tokio_raw_subscriber.rs  tokio_service.rs  tokio_subscriber.rs  untyped_client.rs  wall_timer.rs
r2r/src/: action_clients.rs  action_clients_untyped.rs  action_common.rs  action_servers.rs  clients.rs  clocks.rs  context.rs  error.rs  lib.rs  msg_types.rs  nodes.rs  parameters.rs  publishers.rs  qos.rs  services.rs  subscribers.rs  time_source.rs  utils.rs
r2r/tests/: threads.rs  tokio_test_raw.rs  tokio_testing.rs
r2r_actions/: Cargo.toml  build.rs
r2r_actions/bindings/: action_bindings.rs
r2r_actions/src/: action_wrapper.h  lib.rs
r2r_common/: Cargo.toml
r2r_common/examples/: r2r_info.rs
r2r_common/src/: lib.rs
r2r_macros/: Cargo.toml
r2r_macros/src/: lib.rs
r2r_msg_gen/: Cargo.toml  README.md  build.rs
r2r_msg_gen/bindings/: constants.rs  introspection_functions.rs  msg_bindings.rs  msg_bindings_doc_only.rs  msg_includes.h
r2r_msg_gen/src/: introspection.rs  lib.rs
r2r_rcl/: Cargo.toml  build.rs
r2r_rcl/bindings/: rcl_bindings.rs
r2r_rcl/src/: lib.rs  rcl_wrapper.h
r2r_tracing/: Cargo.toml  README.md  build.rs
r2r_tracing/src/: callback.rs  lib.rs  macros.rs  r2r_tracepoints.rs  r2r_tracepoints_bindings.rs  rclcpp_tracepoints.rs  stream.rs  tracetools_bindings.rs  tracetools_wrapper.h  tracing_id.rs
rcl/: Cargo.toml  build.rs
rcl/src/: lib.rs  rcl_wrapper.h
src/: action_clients.rs  action_clients_untyped.rs  action_servers.rs  clients.rs  clocks.rs  context.rs  error.rs  lib.rs  msg_types.rs  nodes.rs  parameters.rs  publishers.rs  qos.rs  services.rs  subscribers.rs  utils.rs
tests/: Dockerfile  Dockerfile_foxy  Dockerfile_galactic  Dockerfile_humble  Dockerfile_iron  Dockerfile_jazzy  Dockerfile_no_ros  build_minimal_node.bash  test.bash  test.sh  threads.rs  tokio_testing.rs
tools/: refresh_bindings.bash
