
[package]
name = "r2r"
version = "0.5.1"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
description = "Easy to use, runtime-agnostic, async rust bindings for ROS2."
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/sequenceplanner/r2r"
repository = "https://github.com/sequenceplanner/r2r"
documentation = "https://sequenceplanner.github.io/r2r/"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
thiserror = "1.0"
lazy_static = "1.4.0"
common = { path = "common", version = "0.1.0" }
rcl = { path = "rcl", version = "0.1.0" }
msg_gen = { path = "msg_gen", version = "0.1.0" }
actions = { path = "actions", version = "0.1.0" }
uuid = { version = "0.8", features = ["serde", "v4"] }
retain_mut = "0.1.3"
futures = "0.3.15"

[dev-dependencies]
serde_json = "1.0.62"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"

[build-dependencies]
common = { path = "common", version = "0.1.0" }
msg_gen = { path = "msg_gen", version = "0.1.0" }

[workspace]
