[package]
name = "actions"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcl = { path = "../rcl", version = "0.1.0" }
msg_gen = { path = "../msg_gen", version = "0.1.0" }

[build-dependencies]
bindgen = "0.57.0"
itertools = "0.10.0"
common = { path = "../common", version = "0.1.0" }
