[package]
name = "msg_gen"
version = "0.0.2"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
rcl = { path = "../rcl", version = "0.0.2" }
common = { path = "../common", version = "0.0.2" }

[build-dependencies]
bindgen = "0.57.0"
rcl = { path = "../rcl", version = "0.0.2" }
common = { path = "../common", version = "0.0.2" }
heck = "0.3.2"
