[package]
name = "msg_gen"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
rcl = { path = "../rcl", version = "0.1.0" }
common = { path = "../common", version = "0.1.0" }

[build-dependencies]
bindgen = "0.57.0"
rcl = { path = "../rcl", version = "0.1.0" }
common = { path = "../common", version = "0.1.0" }
heck = "0.3.2"
