[package]
name = "r2r"
version = "0.7.3"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
description = "Easy to use, runtime-agnostic, async rust bindings for ROS2."
license = "MIT AND Apache-2.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sequenceplanner/r2r"
repository = "https://github.com/sequenceplanner/r2r"
documentation = "https://docs.rs/r2r/latest/r2r"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
lazy_static = "1.4.0"
r2r_common = { path = "../r2r_common", version = "0.3.6" }
r2r_rcl = { path = "../r2r_rcl", version = "0.3.7" }
r2r_msg_gen = { path = "../r2r_msg_gen", version = "0.3.11" }
r2r_actions = { path = "../r2r_actions", version = "0.3.10" }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
futures = "0.3.25"
log = "0.4.18"
phf = "0.11.1"

[dev-dependencies]
serde_json = "1.0.89"
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
rand = "0.8.5"

[build-dependencies]
r2r_common = { path = "../r2r_common", version = "0.3.6" }
r2r_msg_gen = { path = "../r2r_msg_gen", version = "0.3.11" }
rayon = "1.7.0"
force-send-sync = "1.0.0"
quote = "1.0.28"

[features]
save-bindgen = ["r2r_rcl/save-bindgen", "r2r_msg_gen/save-bindgen", "r2r_actions/save-bindgen"]
doc-only = ["r2r_common/doc-only", "r2r_rcl/doc-only", "r2r_msg_gen/doc-only", "r2r_actions/doc-only"]

[package.metadata.docs.rs]
features = ["doc-only"]
