[package]
name = "r2r"
version = "0.9.4"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
description = "Easy to use, runtime-agnostic, async rust bindings for ROS2."
license = "MIT AND Apache-2.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sequenceplanner/r2r"
repository = "https://github.com/sequenceplanner/r2r"
documentation = "https://docs.rs/r2r/latest/r2r"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
lazy_static = "1.4.0"
r2r_common = { path = "../r2r_common", version = "0.9.4" }
r2r_rcl = { path = "../r2r_rcl", version = "0.9.4" }
r2r_msg_gen = { path = "../r2r_msg_gen", version = "0.9.4" }
r2r_actions = { path = "../r2r_actions", version = "0.9.4" }
r2r_macros = { path = "../r2r_macros", version = "0.9.4" }
r2r_tracing = { path = "../r2r_tracing", version = "0.9.4" }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
futures = "0.3.25"
log = "0.4.18"
phf = "0.11.1"
indexmap = "2.2.6"

[dev-dependencies]
serde_json = "1.0.89"
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "time", "macros"] }
rand = "0.8.5"
cdr = "0.2.4"
criterion = "0.5.1"

[build-dependencies]
r2r_common = { path = "../r2r_common", version = "0.9.4" }
r2r_msg_gen = { path = "../r2r_msg_gen", version = "0.9.4" }
rayon = "1.7.0"
force-send-sync = "1.0.0"
quote = "1.0.28"
proc-macro2 = "1.0.58"
syn = "2.0.18"
prettyplease = "0.2.6"

[features]
save-bindgen = ["r2r_rcl/save-bindgen", "r2r_msg_gen/save-bindgen", "r2r_actions/save-bindgen"]
doc-only = ["r2r_common/doc-only", "r2r_rcl/doc-only", "r2r_msg_gen/doc-only", "r2r_actions/doc-only"]
tracing = ["r2r_tracing/tracing"]

[package.metadata.docs.rs]
features = ["doc-only"]

[[bench]]
name = "deserialization"
harness = false
