[package]
name = "r2r_actions"
version = "0.2.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
description = "Internal dependency to the r2r crate."
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/sequenceplanner/r2r"
repository = "https://github.com/sequenceplanner/r2r"
documentation = "https://sequenceplanner.github.io/r2r/"

[dependencies]
r2r_rcl = { path = "../r2r_rcl", version = "0.2.0" }
r2r_msg_gen = { path = "../r2r_msg_gen", version = "0.2.0" }

[build-dependencies]
bindgen = "0.57.0"
itertools = "0.10.0"
r2r_common = { path = "../r2r_common", version = "0.2.0" }
