[package]
name = "r2r_actions"
version = "0.3.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
description = "Internal dependency to the r2r crate."
license = "MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sequenceplanner/r2r"
repository = "https://github.com/sequenceplanner/r2r"
documentation = "https://sequenceplanner.github.io/r2r/"

[dependencies]
r2r_rcl = { path = "../r2r_rcl", version = "0.3.0" }
r2r_msg_gen = { path = "../r2r_msg_gen", version = "0.3.0" }

[build-dependencies]
bindgen = "0.59.2"
itertools = "0.10.3"
r2r_common = { path = "../r2r_common", version = "0.3.0" }
