[package]
name = "r2r_common"
version = "0.3.6"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
description = "Minimal ros2 bindings."
license = "MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sequenceplanner/r2r"
repository = "https://github.com/sequenceplanner/r2r"
documentation = "https://docs.rs/r2r/latest/r2r"

[dependencies]
bindgen = "0.63.0"
itertools = "0.10.5"
sha2 = "0.10.6"
os_str_bytes = "6.5.1"

[features]
doc-only = []

[package.metadata.docs.rs]
features = ["doc-only"]
