[package]
name = "r2r_msg_gen"
version = "0.2.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
r2r_rcl = { path = "../r2r_rcl", version = "0.2.0" }
r2r_common = { path = "../r2r_common", version = "0.2.0" }

[build-dependencies]
bindgen = "0.57.0"
r2r_rcl = { path = "../r2r_rcl", version = "0.2.0" }
r2r_common = { path = "../r2r_common", version = "0.2.0" }
heck = "0.3.2"
