[package]
name = "r2r_msg_gen"
version = "0.3.11"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
description = "Internal dependency to the r2r crate."
license = "MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sequenceplanner/r2r"
repository = "https://github.com/sequenceplanner/r2r"
documentation = "https://docs.rs/r2r/latest/r2r"

[dependencies]
r2r_rcl = { path = "../r2r_rcl", version = "0.3.7" }
r2r_common = { path = "../r2r_common", version = "0.3.6" }
phf = { version = "0.11.1", features = ["macros"] }
quote = "1.0.28"
proc-macro2 = "1.0.60"
syn = "2.0.18"
force-send-sync = "1.0.0"
rayon = "1.7.0"

[build-dependencies]
bindgen = "0.63.0"
r2r_rcl = { path = "../r2r_rcl", version = "0.3.7" }
r2r_common = { path = "../r2r_common", version = "0.3.6" }
heck = "0.4.0"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full"] }
rayon = "1.7.0"
itertools = "0.10.5"
force-send-sync = "1.0.0"
proc-macro2 = "1.0.60"

[features]
save-bindgen = ["r2r_rcl/save-bindgen"]
doc-only = ["r2r_common/doc-only", "r2r_rcl/doc-only"]

[package.metadata.docs.rs]
features = ["doc-only"]
