[package]
name = "r2r_rcl"
version = "0.3.9"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
description = "Internal dependency to the r2r crate."
license = "MIT"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sequenceplanner/r2r"
repository = "https://github.com/sequenceplanner/r2r"
documentation = "https://docs.rs/r2r/latest/r2r"

[dependencies]
paste = "1.0.9"
widestring = "1.0.2"

[build-dependencies]
bindgen = "0.63.0"
r2r_common = { path = "../r2r_common", version = "0.3.8" }

[features]
save-bindgen = []
doc-only = ["r2r_common/doc-only"]

[package.metadata.docs.rs]
features = ["doc-only"]
